# pycheckout

./: .gitignore  README.md  __init__.py  main.py  prompt_demo.py  pycheckout.py  pyproject.toml
.github/workflows/: linters.yml
codefind/: codefind.sh
codegrep/: codegrep.sh
tests/: test_pycheckout.py
