[project]
name = "git-tui"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "prompt-toolkit>=3.0.52",
    "pygit2>=1.19.2",
    "typer>=0.26.7",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.16",
    "ty>=0.0.44",
]

[tool.ruff]
target-version = "py314"

line-length = 120
indent-width = 4

[tool.ruff.lint]
select = [
    "ERA",
    "A",
    "B",
    "PIE",
    "PYI",
    "SLF",
    "TC",
    "ARG",
    "I",
    "N",
    "PLE",
    "PLW",
    "E",
    "F",
    "RUF100",
    "TID",
    "BLE",
    "C90",
    "TD",
    "PTH",
    # "D", - TODO: uncomment in the future
    "UP",
]
ignore = [
    "E501",
    "E731",
    "PLW1510",
]
