[project]
name = "pycheckout"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "prompt-toolkit>=3.0.52",
    "pygit2>=1.19.2",
    "rich>=15.0.0",
    "typer>=0.26.7",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-mock>=3.15.1",
    "ruff>=0.15.16",
    "ty>=0.0.44",
]

[tool.ruff]
target-version = "py314"
extend-exclude = ["tests"]

line-length = 120
indent-width = 4

[tool.ruff.lint]
select = [
    "ERA",
    "A",
    "B",
    "PIE",
    "PYI",
    "SLF",
    "TC",
    "ARG",
    "I",
    "N",
    "PLE",
    "PLW",
    "E",
    "F",
    "RUF100",
    "TID",
    "BLE",
    "C90",
    "TD",
    "PTH",
    # "D", - TODO: uncomment in the future
    "UP",
]
ignore = [
    "E501",
    "E731",
    "PLW1510",
]

[tool.ty.src]
exclude = [
    ".git/**",
    "tests/**",
]

# run `uv install .`
[project.scripts]
pycheckout = "pycheckout:cli"
